fixed overlapping issue for .col-sm-6 on smaller devices

--- a/src/css/bootcards-ios.css
+++ b/src/css/bootcards-ios.css
@@ -26,7 +26,8 @@ html, body {
 
 /*needed on iOS for the disabled rubberband*/
 .col-sm-6 {
-	height: 100%;
+	/*height: 100%;*/
+	min-height:100%; /* replaced height with min-height as it was causing problems on shorter screens */
 }
 
 /* BUTTONS */
